--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@ body {
 
 header {
   height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .5)), url(./images/header-img.jpeg) no-repeat center center /cover;
+  background: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .5)), url(../../images/header-img.jpeg) no-repeat center center /cover;
 }
 
 /* navbar */
@@ -184,7 +184,7 @@ header {
 
 /* pricing */
 .card-1, .card-2, .card-3 {
-  background: linear-gradient(rgba(0, 0, 0, .6), rgba(0, 0, 0, .5)), url(./images/pricing-card-bg.jpeg) center no-repeat /cover;
+  background: linear-gradient(rgba(0, 0, 0, .6), rgba(0, 0, 0, .5)), url(../../images/pricing-card-bg.jpeg) center no-repeat /cover;
   box-shadow: 7px 18px 50px #555;
   max-width: 400px;
 }
